--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/ioredis": "^4.17.10",
     "@types/jest": "^26.0.19",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.6.3",
     "@types/nodemailer": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
