--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,9 @@
     "baseUrl": "./src",
     "allowJs": true,
     "paths": {
-      "@domain/": ["domain/"],
-      "@infra/": ["infra/"],
-      "@config/": ["config/"],
-      "@shared/": ["shared/"]
+      "@modules/*": ["modules/*"],
+      "@config/*": ["config/*"],
+      "@shared/*": ["shared/*"]
     },
     "esModuleInterop": true,
     "experimentalDecorators": true,
